sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: not found: value i
            deplacerJoueur(i, nCouleur, 1);
                           ^SelectBaseball:66: error: too many arguments for method deplacerJoueur: (pos: Int, arrive: Int, sens: Int)Unit
    deplacerJoueur(couleur, chercheJoueur(arrive, currTrou), arrive, sens)
                  ^